[package]
authors = ['delphinus-lab']
description = 'core swap runtime logic.'
edition = '2018'
homepage = 'https://delphinuslab.com/'
license = 'Unlicense'
name = 'pallet-swap'
repository = 'https://github.com/ZhenXunGe/delphinus-substrate-node'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sha2 = { default-features = false, version = '0.9.5' }
delphinus-crypto = { path = '../../../crypto-rust/substrate', default-features = false }
num-bigint = { version = "0.4", features = ["rand"], default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std'
]
